fix buy not showing

--- a/css/style.css
+++ b/css/style.css
@@ -92,10 +92,12 @@ body {
     text-align: center;
     font-size: 2rem;
     width: 100%;
-    height: 8vh;
+    height: 6vh;
     padding: 1vh;
 
     display: none;
+
+    bottom: 0;
 }
 .cart-buy:hover {
     cursor: pointer;
